changes made on jun 13

--- a/gentrification-calc/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using gentrification_calc.Areas.HelpPage.Models
+@using GentrificationCalc.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
