--- a/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using gentrification_calc.Areas.HelpPage.Models
-@using gentrification_calc.Areas.HelpPage.ModelDescriptions
+@using GentrificationCalc.Areas.HelpPage.Models
+@using GentrificationCalc.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
