--- a/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using gentrification_calc.Areas.HelpPage
+@using GentrificationCalc.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
