--- a/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using gentrification_calc.Areas.HelpPage
-@using gentrification_calc.Areas.HelpPage.Models
+@using GentrificationCalc.Areas.HelpPage
+@using GentrificationCalc.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
