--- a/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using gentrification_calc.Areas.HelpPage.ModelDescriptions
+@using GentrificationCalc.Areas.HelpPage.ModelDescriptions
 @model SimpleTypeModelDescription
 @Model.Documentation
