--- a/gentrification-calc/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using gentrification_calc.Areas.HelpPage.Models
+@using GentrificationCalc.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
