--- a/gentrification-calc/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/gentrification-calc/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using gentrification_calc.Areas.HelpPage.ModelDescriptions
+@using GentrificationCalc.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
