--- a/gentrification-calc/Views/Shared/_Layout.cshtml
+++ b/gentrification-calc/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/angular")
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" ng-app="GentrificationCalcApp" ng-cloak>
         @RenderBody()
         <hr />
         <footer>
