added test for map instance

--- a/gentrification-calc/Views/Home/Index.cshtml
+++ b/gentrification-calc/Views/Home/Index.cshtml
@@ -1,3 +1,6 @@
 ﻿<div class="row">
-    <div ng-controller=""></div>
+    <div ng-controller="MapCtrl" height="180px">
+        <div id="mapid" height="180px"></div>
+
+    </div>
 </div>
