--- a/gentrification-calc/Views/Home/Index.cshtml
+++ b/gentrification-calc/Views/Home/Index.cshtml
@@ -1,6 +1,1 @@
-﻿<div class="row">
-    <div ng-controller="MapCtrl" height="180px">
-        <div id="mapid" height="180px"></div>
-
-    </div>
-</div>
+﻿<div ui-view></div>
