Leaflet Map Rendering on Main Page

--- a/gentrification-calc/Views/Shared/_Layout.cshtml
+++ b/gentrification-calc/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/leaflet")
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
 </head>
 <body>
@@ -30,7 +29,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content" ng-app="GentrificationCalcApp" ng-cloak>
+    <div class="container body-content" ng-app="app" ng-cloak>
         @RenderBody()
         <hr />
         <footer>
