Added changes to convert GeoJSON to TopoJSON in Browser

--- a/gentrification-calc/Views/Shared/_Layout.cshtml
+++ b/gentrification-calc/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
         </footer>
     </div>
 
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
